--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
-    "gulp-sass-globbing": "^0.0.2"
+    "node-sass-globbing": "^0.0.23"
   }
 }
