--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode=development --hot"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/vzlab/vzlab-style/issues"
   },
-  "homepage": "https://github.com/vzlab/vzlab-style#readme"
+  "homepage": "https://github.com/vzlab/vzlab-style#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "css-loader": "^2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "style-loader": "^0.23",
+    "webpack": "^4.27",
+    "webpack-cli": "^3.1",
+    "webpack-dev-server": "^3.1"
+  }
 }
