--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^2.0",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.5",
     "style-loader": "^0.23",
+    "stylus": "^0.54",
+    "stylus-loader": "^3.0",
     "webpack": "^4.27",
     "webpack-cli": "^3.1",
     "webpack-dev-server": "^3.1"
