add build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode=development --hot"
+    "start": "webpack-dev-server --mode=development --hot",
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
