--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode=development --hot",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "lint:stylus": "stylint --config .stylintrc src/"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "mini-css-extract-plugin": "^0.5",
     "pre-commit": "^1.2",
     "style-loader": "^0.23",
+    "stylint": "^1.5",
     "stylus": "^0.54",
     "stylus-loader": "^3.0",
     "webpack": "^4.27",
@@ -31,6 +33,7 @@
     "webpack-dev-server": "^3.1"
   },
   "pre-commit": [
+    "lint:stylus",
     "build"
   ]
 }
