--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pre-commit": "^1.2",
     "style-loader": "^0.23",
     "stylint": "^1.5",
+    "stylint-loader": "felds/stylint-loader#master",
     "stylus": "^0.54",
     "stylus-loader": "^3.0",
     "webpack": "^4.27",
