put blocks inside own folder

--- a/.stylintrc
+++ b/.stylintrc
@@ -3,5 +3,6 @@
   "semicolons": "always",
   "sortOrder": "grouped",
   "prefixVarsWithDollar": "always",
+  "brackets": "always",
   "namingConvention": "BEM"
 }
