--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode=development --hot",
-    "build": "webpack --mode=production",
-    "lint:stylus": "stylint --config .stylintrc src/"
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -24,8 +23,6 @@
     "css-loader": "^2.0",
     "mini-css-extract-plugin": "^0.5",
     "style-loader": "^0.23",
-    "stylint": "^1.5",
-    "stylint-loader": "felds/stylint-loader#master",
     "stylus": "^0.54",
     "stylus-loader": "^3.0",
     "webpack": "^4.27",
