--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "css-loader": "^2.0",
     "mini-css-extract-plugin": "^0.5",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23",
     "stylus": "^0.54",
     "stylus-loader": "^3.0",
