--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^2.0",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
