--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/vzlab/vzlab-style#readme",
   "dependencies": {},
   "devDependencies": {
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
