--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/vzlab/vzlab-style#readme",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.0",
     "file-loader": "^3.0.1",
@@ -32,6 +35,7 @@
     "style-loader": "^0.23",
     "stylus": "^0.54",
     "stylus-loader": "^3.0",
+    "terser-webpack-plugin": "^1.2.2",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.27",
     "webpack-cli": "^3.1",
